...
              padding:
                  const EdgeInsets.symmetric(horizontal: 12, vertical: 12),
              duration: const Duration(milliseconds: 400),
              tabBackgroundColor: theme.colorScheme.primary,
              color: theme.colorScheme.onSurface,
              tabs: [
                const GButton(key: Key('nav_home_button'), icon: Icons.home_outlined, text: 'Home'),
                const GButton(
                    key: Key('nav_journey_button'),
                    icon: Icons.photo_library_outlined, text: 'Journey'),
                GButton(
                  key: const Key('nav_chat_button'),
                  icon: Icons.chat_bubble_outline_rounded,
                  leading: Selector<ChatProvider, int>(
                    selector: (context, provider) =>
...
