...
    return DateTime.fromMillisecondsSinceEpoch(0);
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Our Journey'), centerTitle: true),
      // ✨ --- WATCH 5 PROVIDERS --- ✨
      body: Consumer5<JournalProvider, MediaProvider, UserProvider, CoupleProvider, SecretNoteProvider>(
        builder: (context, journalProvider, mediaProvider, userProvider, coupleProvider, secretNoteProvider, _) {
          
          if (!_isInitialized) {
            return _buildLoadingSkeleton();
...
